modify modal library

--- a/박선아_modal/index.html
+++ b/박선아_modal/index.html
@@ -11,14 +11,14 @@
 <body>
     <div class="modal-button-container">
         <div class="out-text">모달창 띄우기🎈</div>
-        <button id="open">Click Me!</button>
+        <button id="modalllll">Click Me!</button>
     </div>
 </body>
 </html>
 
 <script type="text/javascript" src='./modal_library.js'></script> 
 <script>
-    makeModal('modal', 'This is the first modal I made!✌');
+    makeModal(modalllll, 'This is the first modal I made!✌');
 </script>
 
 
